--- a/views/crm/addCustomer.gohtml
+++ b/views/crm/addCustomer.gohtml
@@ -31,15 +31,15 @@
                     <form class="row g-3" enctype="multipart/form-data" action="/new-customer" method="POST">
                     {{csrfField}}
                         <div class="col-md-6 mb-3">
-                            <label for="Text1" class="form-label font-weight-bold text-muted text-uppercase">Product Name</label>
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Enter Product Name">
+                            <label for="Text1" class="form-label font-weight-bold text-muted text-uppercase">Nombre</label>
+                            <input type="text" class="form-control" name="name" id="name" placeholder="Enter Name">
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Email</label>
                             <input type="text" class="form-control" name="email" id="email" placeholder="Enter Email">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">direction</label>
+                            <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">Direction</label>
                             <input type="text" class="form-control" name="direction" id="direction" placeholder="Enter Direction">
                         </div>
                         <div class="col-md-6 mb-3">
@@ -56,7 +56,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-end mt-3">
                         <button type="submit" class="btn btn-primary">
-                            Create Product
+                            Create customer
                         </button>
                     </div>
                 </div>
