--- a/views/crm/addOrder.gohtml
+++ b/views/crm/addOrder.gohtml
@@ -8,8 +8,8 @@
                <div class="d-flex align-items-center justify-content-between">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb p-0 mb-0">
-                            <li class="breadcrumb-item"><a href="/customers">Cliente</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Añadir pedido</li>
+                            <li class="breadcrumb-item"><a href="/orders">Order</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Add order</li>
                         </ol>
                     </nav>
                 </div>
