--- a/views/crm/home.gohtml
+++ b/views/crm/home.gohtml
@@ -133,13 +133,11 @@
                  {{range .Yield.Orders}}
                     <tr class="white-space-no-wrap">
                         <td>{{ formatDate .CreatedAt}}</td>
-                       <td>{{.Material.Name}} | {{.Material.Color}}</td>
+                       <td>prueba</td>
                        <td>
                           {{.Customer.Name}}
                        </td>
-                       <td> {{range .Products}}
-                        {{ .Name }} 
-                        {{ end }}
+                       <td> prueba2
                         
                        </td>
                        <td>
