--- a/views/crm/customers.gohtml
+++ b/views/crm/customers.gohtml
@@ -72,7 +72,7 @@
                                                     <label class="text-muted mb-0" >Telefóno</label>
                                                 </th>
                                                 <th scope="col" class="text-right">
-                                                    <label class="text-muted mb-0">Origen</label>
+                                                    <label class="text-muted mb-0">Instagram</label>
                                                 </th>
 <th scope="col" class="text-right">
     <label class="text-muted mb-0"></label>
@@ -102,7 +102,7 @@
                                                     {{.Phone}}
                                                 </td>
                                                 <td>
-                                                    {{.Origin}}
+                                                    {{.Instagram}}
                                                 </td>
                                                 <td>
                                                     <div class="d-flex justify-content-end align-items-center">                                                        
