--- a/views/crm/addCustomer.gohtml
+++ b/views/crm/addCustomer.gohtml
@@ -47,8 +47,8 @@
                             <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter Phone">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Origin</label>
-                            <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin">
+                            <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Instagram</label>
+                            <input type="text" class="form-control" name="instagram" id="instagram" placeholder="Enter instagram">
                         </div>
                 </div>
             </div>
