--- a/views/crm/singleOrder.gohtml
+++ b/views/crm/singleOrder.gohtml
@@ -46,7 +46,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Origin</label>
-                            <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin" value="{{.Yield.Customer.Origin}}" readonly>
+                            <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin" value="{{.Yield.Customer.Instagram}}" readonly>
                         </div>
                 </div>
             </div>
