--- a/views/crm/printers.gohtml
+++ b/views/crm/printers.gohtml
@@ -7,14 +7,14 @@
             <div class="col-lg-12">
                 <div class="d-flex flex-wrap align-items-center justify-content-between my-schedule mb-4">
                    <div class="d-flex align-items-center justify-content-between">
-                        <h4 class="font-weight-bold">Pedidos</h4>
+                        <h4 class="font-weight-bold">Impresoras</h4>
                     </div>  
                     <div class="create-workform">
                         <div class="d-flex flex-wrap align-items-center justify-content-between">
                             <div class="modal-product-search d-flex">
                                 <form class="mr-3 position-relative">
                                     <div class="form-group mb-0">
-                                    <input type="text" class="form-control" id="exampleInputText" placeholder="Buscar pedido">
+                                    <input type="text" class="form-control" id="exampleInputText" placeholder="Buscar impresora">
                                     <a class="search-link" href="#">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -22,11 +22,11 @@
                                     </a>
                                     </div>
                                 </form>
-                                <a href="/new-order" class="btn btn-primary position-relative d-flex align-items-center justify-content-between">
+                                <a href="/new-printer" class="btn btn-primary position-relative d-flex align-items-center justify-content-between">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="mr-2" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                                     </svg>
-                                    Añadir pedido
+                                    Añadir Impresora
                                 </a>
                             </div>
                         </div>
@@ -38,7 +38,13 @@
                         <div class="card card-block card-stretch">
                             <div class="card-body p-0">
                                 <div class="d-flex justify-content-between align-items-center p-3">
-                                    <h5 class="font-weight-bold">Lista de pedidos</h5>
+                                    <h5 class="font-weight-bold">Lista de impresoras</h5>
+                                    <button class="btn btn-secondary btn-sm">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="mr-1" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                                        </svg>
+                                        Export
+                                    </button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table data-table mb-0">
@@ -54,24 +60,20 @@
                                                     </div>                                                    
                                                 </th>
                                                 <th scope="col">
-                                                    <label class="text-muted m-0" >Nombre cliente</label>
-                                                </th>
-                                                <th scope="col">
-                                                    <label class="text-muted m-0" >Productos</label>
+                                                    <label class="text-muted m-0" >Nombre</label>
                                                 </th>
                                                 <th scope="col" class="dates">
-                                                    <label class="text-muted mb-0" >Minutos</label>
+                                                    <label class="text-muted mb-0" >Precio</label>
                                                 </th>
                                                 <th scope="col">
-                                                    <label class="text-muted mb-0" >Coste</label>
+                                                    <label class="text-muted mb-0" >Color</label>
                                                 </th>
                                                 <th scope="col">
-                                                    <label class="text-muted mb-0" >Venta</label>
+                                                    <label class="text-muted mb-0" >Peso</label>
                                                 </th>
                                                 <th scope="col" class="text-right">
-                                                    <label class="text-muted mb-0">Enviado</label>
+                                                    <label class="text-muted mb-0">Proveedor</label>
                                                 </th>
-
 <th scope="col" class="text-right">
     <label class="text-muted mb-0"></label>
 </th>
@@ -79,7 +81,7 @@
                                             
                                         </thead>
                                         <tbody>
-                                        {{ range .Yield.Orders }}
+                                        {{ range .Yield.Printers }}
                                             <tr class="white-space-no-wrap">
                                                 <td class="pr-0">
                                                     <div class="custom-control custom-checkbox custom-control-inline">
@@ -88,43 +90,22 @@
                                                     </div>                                    
                                                 </td>
                                                 <td>
-                                                    <a href="#">{{.Customer.Name}}</a>
+                                                    {{.Name}}
                                                 </td>
                                                 <td>
-                                                    {{ range .Products}}
-                                                    1x {{.Product.Name}} 
-                                                    {{end}}
+                                                    hola
                                                 </td>
                                                 <td>
-                                                    {{.TimeMinutes}}
+                                                    hola
                                                 </td>
                                                 <td>
-                                                    {{.Cost}}
+                                                    hola
                                                 </td>
                                                 <td>
-                                                    {{.Sale}}
+                                                    hola
                                                 </td>
                                                 <td>
-                                                    {{if .Sent}}
-                                                    Sí
-                                                    {{else}}
-                                                    No
-                                                    {{end}}
-                                                </td>
-                                                <td>
-                                                    <div class="d-flex justify-content-end align-items-center">                                                        
-                                                        <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View" href="/orders/{{.ID}}">
-                                                            <svg xmlns="http://www.w3.org/2000/svg" class="text-secondary mx-4" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-                                                            </svg>
-                                                        </a>
-                                                        <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="Print" href="#">
-                                                            <svg xmlns="http://www.w3.org/2000/svg" class="text-secondary" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z" />
-                                                            </svg>
-                                                        </a>
-                                                    </div>
+                                                    hola
                                                 </td>
                                             </tr>
                                             {{end}}
@@ -138,10 +119,5 @@
                 </div>
             </div>
         </div>
-        </div>
-    <!-- ... Otros campos de la fila ... -->
-</div>
-<!-- Botón para agregar una nueva fila -->
-                
 {{end}}
 {{template "yield"}}
