--- a/views/crm/home.gohtml
+++ b/views/crm/home.gohtml
@@ -89,19 +89,7 @@
             </div>
             <div class="card-body-list">               
                <ul class="list-style-3 mb-0">
-               {{range .Yield.Products}}
-                  <li class="p-3 list-item d-flex justify-content-start align-items-center">
-                     <div class="avatar">
-                        <img class="avatar avatar-img avatar-60 rounded" src="/assets/images/products/{{ .Picture}}" alt="1.jpg">                        
-                     </div>
-                     <div class="list-style-detail ml-3 mr-2">
-                        <p class="mb-0">{{ .Name }}</p>
-                     </div>
-                     <div class="list-style-action d-flex justify-content-end ml-auto">                        
-                        <h6 class="font-weight-bold">${{.Price}}</h6>                        
-                     </div>
-                  </li>
-                  {{end}}
+              
                </ul>
             </div>
          </div>
@@ -130,24 +118,7 @@
                     </tr>
                  </thead>
                  <tbody>
-                 {{range .Yield.Orders}}
-                    <tr class="white-space-no-wrap">
-                        <td>{{ formatDate .CreatedAt}}</td>
-                       <td>prueba</td>
-                       <td>
-                          {{.Customer.Name}}
-                       </td>
-                       <td> prueba2
-                        
-                       </td>
-                       <td>
-                          <p class="mb-0 text-success d-flex justify-content-start align-items-center">${{.Cost}}
-                          </p>
-                       </td>
-                       <td>${{.Sale}}</td>
-                       <td class="text-right">${{minus .Sale .Cost }}</td>
-                    </tr>
-                    {{end}}
+               
 
                  </tbody>
               </table>
@@ -226,18 +197,14 @@
       var datosChart1 = {
     series: [{
       name: 'Ingresos',
-      data: [ {{range .Yield.Orders}}
-                {{.Sale}},
-                {{end}}]
+      data: [ 1,2,3
     }, {
       name: 'Gastos',
-      data: [{{range .Yield.Orders}}
-                {{.Cost}},
-                {{end}}]
+      data: [1,2,3]
     }],
-    categories: [ {{range .Yield.Orders}} 
-    '{{ formatDate .CreatedAt}}',
-    {{end}}
+    categories: [  
+    '2/3/2024',
+    
     ]
   };
     </script>
