--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -215,7 +215,7 @@
                            <li class="nav-item nav-icon dropdown">
                                <a href="#" class="nav-item nav-icon dropdown-toggle pr-0 search-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 
-                                   <span class="mb-0 ml-2 user-name">{{.User.Name}} </span>
+                                   <span class="mb-0 ml-2 user-name">TODOO .User.Name </span>
                                </a>
                                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                    <li class="dropdown-item  d-flex svg-icon border-top">
