--- a/views/crm/customers.gohtml
+++ b/views/crm/customers.gohtml
@@ -7,30 +7,8 @@
             <div class="col-lg-12">
                 <div class="d-flex flex-wrap align-items-center justify-content-between my-schedule mb-4">
                    <div class="d-flex align-items-center justify-content-between">
-                        <h4 class="font-weight-bold">Clientes</h4>
-                    </div>  
-                    <div class="create-workform">
-                        <div class="d-flex flex-wrap align-items-center justify-content-between">
-                            <div class="modal-product-search d-flex">
-                                <form class="mr-3 position-relative">
-                                    <div class="form-group mb-0">
-                                    <input type="text" class="form-control" id="exampleInputText" placeholder="Buscar Cliente">
-                                    <a class="search-link" href="#">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                                        </svg>
-                                    </a>
-                                    </div>
-                                </form>
-                                <a href="/new-customer" class="btn btn-primary position-relative d-flex align-items-center justify-content-between">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="mr-2" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
-                                    </svg>
-                                    Añadir cliente
-                                </a>
-                            </div>
-                        </div>
-                    </div>                    
+                        <h4 class="font-weight-bold">Usuarios</h4>
+                    </div>
                 </div>
                 
                 <div class="row">
@@ -38,7 +16,7 @@
                         <div class="card card-block card-stretch">
                             <div class="card-body p-0">
                                 <div class="d-flex justify-content-between align-items-center p-3">
-                                    <h5 class="font-weight-bold">Lista de Clientes</h5>
+                                    <h5 class="font-weight-bold">Lista de Usuarios</h5>
                                     <button class="btn btn-secondary btn-sm">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="mr-1" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
@@ -66,13 +44,13 @@
                                                     <label class="text-muted mb-0" >Correo</label>
                                                 </th>
                                                 <th scope="col">
-                                                    <label class="text-muted mb-0" >Dirección</label>
+                                                    <label class="text-muted mb-0" >Admin</label>
                                                 </th>
                                                 <th scope="col">
                                                     <label class="text-muted mb-0" >Telefóno</label>
                                                 </th>
                                                 <th scope="col" class="text-right">
-                                                    <label class="text-muted mb-0">Instagram</label>
+                                                    <label class="text-muted mb-0">Email verificado</label>
                                                 </th>
 <th scope="col" class="text-right">
     <label class="text-muted mb-0"></label>
@@ -81,7 +59,7 @@
                                             
                                         </thead>
                                         <tbody>
-                                        {{ range .Yield.Customers }}
+                                        {{ range .Yield.Users }}
                                             <tr class="white-space-no-wrap">
                                                 <td class="pr-0">
                                                     <div class="custom-control custom-checkbox custom-control-inline">
@@ -90,19 +68,19 @@
                                                     </div>                                    
                                                 </td>
                                                 <td>
-                                                    {{.Name}}
+                                                    {{.Name}} {{.LastName}}
                                                 </td>
                                                 <td>
                                                     {{.Email}}
                                                 </td>
                                                 <td>
-                                                    {{.Direction}}
+                                                    {{.IsAdmin}}
                                                 </td>
                                                 <td>
-                                                    {{.Phone}}
+                                                    {{.PhoneNumber}}
                                                 </td>
                                                 <td>
-                                                    {{.Instagram}}
+                                                    {{formatDate .EmailVerifiedAt}}
                                                 </td>
                                                 <td>
                                                     <div class="d-flex justify-content-end align-items-center">                                                        
