--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -218,9 +218,14 @@
                                    <span class="mb-0 ml-2 user-name">{{.User.Name}} </span>
                                </a>
                                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                   <li class="dropdown-item  d-flex svg-icon border-top">
-                                       <a href="/logout">Logout</a>
-                                   </li>
+                                   <li class="dropdown-item d-flex svg-icon border-top">
+                                        <form action="/logout" method="post" class="w-100">
+                                        {{csrfField}}
+                                            <button type="submit" class="btn btn-link text-start w-100 p-0">
+                                                Logout
+                                            </button>
+                                        </form>
+                                    </li>
                                </ul>
                            </li>
                        </ul>                     
