--- a/views/crm/orders/index.gohtml
+++ b/views/crm/orders/index.gohtml
@@ -92,7 +92,7 @@
                                                 </td>
                                                 <td>
                                                     {{ range .OrderLines}}
-                                                    1x {{.Attribute.Product.Name}}
+                                                    x{{.Quantity}} {{.Attribute.Product.Name}}
                                                     {{end}}
                                                 </td>
                                                 <td>
