--- a/views/crm/orders/show.gohtml
+++ b/views/crm/orders/show.gohtml
@@ -1,134 +1,149 @@
 {{define  "yield"}}
- <div class="wrapper">
-    {{template "navbar" .}}
-<div class="content-page">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="d-flex flex-wrap align-items-center justify-content-between">
-               <div class="d-flex align-items-center justify-content-between">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb p-0 mb-0">
-                            <li class="breadcrumb-item"><a href="/orders">Pedidos</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Pedido individual</li>
-                        </ol>
-                    </nav>
-                </div>
-                <a href="/orders" class="btn btn-primary btn-sm d-flex align-items-center justify-content-between ml-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
-                    </svg>
-                    <span class="ml-2">Atrás</span>
-                </a>
-            </div>
-        </div>
-        <div class="col-lg-12 mb-3 d-flex justify-content-between">
-            <h4 class="font-weight-bold d-flex align-items-center">Pedido</h4>
-        </div>
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="font-weight-bold mb-3">Informacion del cliente</h5>
-                        <div class="col-md-6 mb-3">
-                            <label for="Text1" class="form-label font-weight-bold text-muted text-uppercase">Nombre</label>
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Enter Name" value="{{.Yield.Customer.Name}}" readonly>
+    <div class="wrapper">
+        {{template "navbar" .}}
+        <div class="content-page">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="d-flex flex-wrap align-items-center justify-content-between">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb p-0 mb-0">
+                                    <li class="breadcrumb-item"><a href="/orders">Pedidos</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Pedido individual</li>
+                                </ol>
+                            </nav>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Email</label>
-                            <input type="text" class="form-control" name="email" id="email" placeholder="Enter Email" value="{{.Yield.Customer.Email}}" readonly>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">Direction</label>
-                            <input type="text" class="form-control" name="direction" id="direction" placeholder="Enter Direction" value="{{.Yield.Customer.Direction}}" readonly>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="color" class="form-label font-weight-bold text-muted text-uppercase">Phone</label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter Phone" value="{{.Yield.Customer.Phone}}" readonly>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Instagram</label>
-                            <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin" value="{{.Yield.Customer.Instagram}}" readonly>
-                        </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="col-lg-12 mb-3 d-flex justify-content-between">
-                    <h4 class="font-weight-bold d-flex align-items-center">Productos</h4>
-                </div>
-                <div class="table-responsive">
+                        <a href="/orders" class="btn btn-primary btn-sm d-flex align-items-center justify-content-between ml-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+                            </svg>
+                            <span class="ml-2">Atrás</span>
+                        </a>
                     </div>
-                                    <table class="table data-table mb-0" style="    text-align: center;">
-                                        <thead class="table-color-heading">
-                                        
-                                            <tr class="text-light">              
-                                                <th scope="col">
-                                                    <label class="text-muted m-0" >Producto</label>
-                                                </th>
-                                                <th scope="col" class="dates">
-                                                    <label class="text-muted mb-0" >Material</label>
-                                                </th>
-                                                <th scope="col">
-                                                    <label class="text-muted mb-0" >Color</label>
-                                                </th>
-                                                <th scope="col">
-                                                    <label class="text-muted mb-0" >Calidad</label>
-                                                </th>
-                                                <th scope="col">
-                                                    <label class="text-muted mb-0" >Calidad</label>
-                                                </th>
-                                                <th scope="col">
-                                                    <label class="text-muted mb-0" >Impresora</label>
-                                                </th>
-                                                <th scope="col">
-                                                    
-                                                </th>
-                                            </tr>
-                                            
-                                        </thead>
-                                        <tbody>
-                                            {{range .Yield.Products}}
-                                            <tr class="white-space-no-wrap">
-                                                <td>
-                                                    <a href=/products/{{.Product.ID}}>
-                                                        <input style="text-align: center;" type="text" class="form-control" value="{{.Product.Name}}" readonly>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align: center;" type="text" class="form-control" value="{{.Material.Name}}" readonly>
-                                                </td>
-                                                <td>
-                                                    <div class="cuadrado" style=" 
-                                                      width: 20px;           
-                                                      height: 20px;          
-                                                      background: {{.Material.Color}};        /* Fondo de color rojo */
-                                                      border: 1px solid #000;">
-                                                      </div>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align: center;" type="text" class="form-control" value="{{.Quality}}" readonly>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align: center;" type="text" class="form-control" value="{{.Product.Name}}" readonly>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align: center;" type="text" class="form-control" value="{{.Printer.Name}}" readonly>
-                                                </td>
-                                                <td>
-                                                <a href="/assets/stl/products/{{.Product.Stl}}" download>Descargar<br>STL</a>
-                                                </td>
-                                            </tr>
-                                            {{end}}
-                                        </tbody>
-                                    </table>
-                                   
-                                    </div>
-                                    </div>
                 </div>
-                </form>
+                <div class="col-lg-12 mb-3 d-flex justify-content-between">
+                    <h4 class="font-weight-bold d-flex align-items-center">Pedido: {{.Yield.ID}}</h4>
+                </div>
+            </div>
+                <!-- Tarjetas en la misma fila -->
+                <div class="row">
+                    <div class="col-md-6"> <!-- Ajustamos a col-md-6 para pantallas medianas y mayores -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="font-weight-bold mb-3">Información del cliente</h5>
+                                <div class="col-md-12 mb-3">
+                                    <label for="Text1" class="form-label font-weight-bold text-muted text-uppercase">Nombre</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder="Enter Name" value="{{.Yield.User.Name}} {{.Yield.User.LastName}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Email</label>
+                                    <input type="text" class="form-control" name="email" id="email" placeholder="Enter Email" value="{{.Yield.User.Email}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">Dirección</label>
+                                    <input type="text" class="form-control" name="direction" id="direction" placeholder="Enter Direction" value="{{.Yield.OrderAddress.AddressLine1}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="color" class="form-label font-weight-bold text-muted text-uppercase">Teléfono</label>
+                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter Phone" value="{{.Yield.OrderAddress.PhoneNumber}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Estado pedido</label>
+                                    <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin" value="{{.Yield.OrderStatus.Status}}" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Segunda tarjeta en la misma fila -->
+                    <div class="col-md-6"> <!-- Misma clase para que estén en la misma fila -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="font-weight-bold mb-3">Información del pago</h5>
+                                <div class="col-md-12 mb-3">
+                                    <label class="form-label font-weight-bold text-muted text-uppercase">Estado</label>
+                                    <input type="text" class="form-control" value="{{.Yield.OrderPaymentStatus.PaymentStatus}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Tipo</label>
+                                    <input type="text" class="form-control" value="{{.Yield.OrderPaymentStatus.PaymentType}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">Dirección</label>
+                                    <input type="text" class="form-control" name="direction" id="direction" placeholder="Enter Direction" value="{{.Yield.OrderAddress}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="color" class="form-label font-weight-bold text-muted text-uppercase">Teléfono</label>
+                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter Phone" value="{{.Yield.OrderAddress.PhoneNumber}}" readonly>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="supplier" class="form-label font-weight-bold text-muted text-uppercase">Estado pedido</label>
+                                    <input type="text" class="form-control" name="origin" id="origin" placeholder="Enter Origin" value="{{.Yield.OrderStatus.Status}}" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Products card below -->
+                <div class="card">
+                    <div class="card-body">
+                        <div class="col-lg-12 mb-3 d-flex justify-content-between">
+                            <h4 class="font-weight-bold d-flex align-items-center">Productos</h4>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table data-table mb-0" style="text-align: center;">
+                                <thead class="table-color-heading">
+                                <tr class="text-light">
+                                    <th scope="col"><label class="text-muted m-0">Producto</label></th>
+                                    <th scope="col" class="dates"><label class="text-muted mb-0">Cantidad</label></th>
+                                    <th scope="col"><label class="text-muted mb-0">Color</label></th>
+                                    <th scope="col"><label class="text-muted mb-0">Material</label></th>
+                                    <th scope="col"><label class="text-muted mb-0">Acabado</label></th>
+                                    <th scope="col"><label class="text-muted mb-0">Estado</label></th>
+                                    <th scope="col"></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{range .Yield.OrderLines}}
+                                    <tr class="white-space-no-wrap">
+                                        <td>
+                                            <a href=/products/{{.Attribute.Product.ID}}>
+                                                <input style="text-align: center;" type="text" class="form-control" value="{{.Attribute.Product.Name}}" readonly>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <input style="text-align: center;" type="text" class="form-control" value="{{.Quantity}}" readonly>
+                                        </td>
+                                        <td>
+                                            <div class="cuadrado" style="
+                                          width: 20px;
+                                          height: 20px;
+                                          background: #ffffff;
+                                          border: 1px solid #000;">
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <input style="text-align: center;" type="text" class="form-control" value="{{.Attribute.Material.Name}}" readonly>
+                                        </td>
+                                        <td>
+                                            <input style="text-align: center;" type="text" class="form-control" value="{{.Attribute.Finish.Name}}" readonly>
+                                        </td>
+                                        <td>
+                                            <input style="text-align: center;" type="text" class="form-control" value="" readonly>
+                                        </td>
+                                        <td>
+                                            <a href="/assets/stl/products/" download>Descargar<br>STL</a>
+                                        </td>
+                                    </tr>
+                                {{end}}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div>
 {{end}}
 {{template "yield"}}
